--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Created by https://www.gitignore.io
+
+kernel/log
+
+### C ###
 # Object files
 *.o
 *.ko
@@ -28,6 +33,32 @@
 *.x86_64
 *.hex
 
-# Debug files
-*.dSYM/
-*.su
+
+### Eclipse ###
+*.pydevproject
+.metadata
+.gradle
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# PDT-specific
+.buildpath
+
+# sbteclipse plugin 
+.target
+
+# TeXlipse plugin
+.texlipse
