--- a/shared-leto/.project
+++ b/shared-leto/.project
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>consola</name>
+	<name>shared-leto</name>
 	<comment></comment>
 	<projects>
-		<project>shared-leto</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
