--- a/cpu/.project
+++ b/cpu/.project
@@ -3,7 +3,7 @@
 	<name>cpu</name>
 	<comment></comment>
 	<projects>
-		<project>ipc</project>
+		<project>shared-leto</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
