--- a/kernel/conf/kernel.conf
+++ b/kernel/conf/kernel.conf
@@ -8,7 +8,7 @@ QUANTUM=20
 QUANTUM_SLEEP=500
 ALGORITMO=RR
 GRADO_MULTIPROG=5
-SEM_IDS=[SEM1, SEM2, SEM3, mutexA]
-SEM_INIT=[0, 0, 5, 0]
-SHARED_VARS=[!Global, !UnaVar, !tiempo3]
+SEM_IDS=[b, c, SEM3, mutexA]
+SEM_INIT=[1, 0, 5, 1]
+SHARED_VARS=[!Global, !UnaVar, !colas]
 STACK_SIZE=1
