--- a/filesystem/.project
+++ b/filesystem/.project
@@ -3,6 +3,7 @@
 	<name>filesystem</name>
 	<comment></comment>
 	<projects>
+		<project>shared-leto</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
